# ora

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SPEC.md  demo.py  docker-compose.yml  pyproject.toml  start_demo.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: index.html  v2.html
examples/: README.md  async_usage.py  multi_source.py  quickstart.py  retail_semantic.yaml  training_feedback.py
ora/: __init__.py
sqlagent/: __init__.py  agent.py  agents.py  auth.py  cli.py  confidence.py  config.py  data_profiler.py  disambiguation.py  exceptions.py  execution.py  generators.py  hub.py  llm.py  models.py  retrieval.py  rules.py  runtime.py  schema.py  schema_agent.py  semantic_agent.py  semantic_layer.py  server.py  soul.py  telemetry.py  trace.py  visualization.py  workspace.py
sqlagent/agents/: __init__.py  learn.py  learning_loop.py  orchestrator.py  protocol.py  schema.py  semantic.py  setup.py  sql.py
sqlagent/connectors/: __init__.py  airbyte_connector.py  file_connector.py  rest_connector.py  sql_connectors.py  warehouse_connectors.py
sqlagent/connectors/catalog/: __init__.py  google_analytics.py  hubspot.py  salesforce.py  shopify.py  stripe.py
sqlagent/graph/: __init__.py  builder.py  learn_graph.py  nodes.py  ora_react.py  state.py
sqlagent/semantic/: __init__.py  auto_generate.py  glossary.py  loader.py  model.py
sqlagent/ui/: app.html  docs.html  preview_a.html  preview_bp.html  preview_c.html
tests/: conftest.py  e2e_agentic.py  test_semantic_model.py  test_v2_features.py
tests/integration/: test_security.py  test_server.py
tests/unit/: test_connectors.py  test_graph.py  test_models.py  test_policy.py  test_server.py
