[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ora-sql"
version = "2.1.2"
description = "ora — The NL2SQL Agentic Runtime. Connect any database. Ask in plain English."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ora contributors"},
]
keywords = ["nlp", "sql", "llm", "agents", "rag", "nl2sql", "langgraph", "agentic", "text-to-sql", "natural-language"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Web Environment",
    "Natural Language :: English",
    "Typing :: Typed",
]
dependencies = [
    # LangGraph orchestration
    "langgraph>=0.2",
    "langchain-core>=0.3",

    # LLM routing — skip 1.82.7/1.82.8 (supply chain attack, March 2026)
    "litellm>=1.40,!=1.82.7,!=1.82.8",

    # Observability (core, not optional)
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "prometheus-client>=0.20",

    # Data
    "pydantic>=2.5",
    "sqlalchemy>=2.0",
    "sqlglot>=23.0",
    "duckdb>=0.10",
    "pandas>=2.1",
    "aiosqlite>=0.19",

    # Vector store + embeddings
    "qdrant-client[fastembed]>=1.9",
    "fastembed>=0.2",

    # API server
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "sse-starlette>=2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",

    # Auth
    "PyJWT>=2.8",

    # File formats
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "python-pptx>=1.0",

    # Utilities
    "structlog>=24.0",
    "typer[all]>=0.12",
    "rich>=13.0",
    "aiofiles>=23.0",
]

[project.urls]
Homepage = "https://github.com/ashfrnndz21/ora"
Repository = "https://github.com/ashfrnndz21/ora"
Documentation = "https://github.com/ashfrnndz21/ora#readme"
"Bug Tracker" = "https://github.com/ashfrnndz21/ora/issues"
Changelog = "https://github.com/ashfrnndz21/ora/blob/main/CHANGELOG.md"

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
mysql = ["aiomysql>=0.2"]
snowflake = ["snowflake-connector-python>=3.6"]
bigquery = ["google-cloud-bigquery>=3.17"]
redshift = ["boto3>=1.34"]
langfuse = ["langfuse>=2.30"]
merkle = ["jcs>=0.2"]
all = ["ora-sql[postgres,mysql,snowflake,bigquery,redshift,langfuse,merkle]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[project.scripts]
ora = "sqlagent.cli:main"
sqlagent = "sqlagent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sqlagent*", "ora*"]

[tool.setuptools.package-data]
# Include all non-Python files that ship with the package.
# Without this, `ora serve` silently fails for pip-installed users
# because app.html and font files are absent from the wheel.
"sqlagent.ui" = ["*.html", "*.ttf", "*.woff", "*.woff2", "*.css", "*.js"]
"sqlagent.prompts" = ["**/*.j2", "**/*.txt", "**/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
